--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   http: ^1.2.1
   url_launcher: ^6.2.6
+  firebase_storage: ^11.7.5
+  firebase_auth: ^4.19.5
+  firebase_core: ^2.31.0
 
 dev_dependencies:
   flutter_test:
